# freetype2-sdf

./: CMakeLists.txt  ChangeLog
src/: ext.h  sdfgen.c  sdfgen.h
